update references to certain articles that graduated from preprint

--- a/article/references.bib
+++ b/article/references.bib
@@ -56,12 +56,27 @@
   pages     = {1--19},
   note      = {Version: 1.0.9}
 }
-@article{devlin2018bert,
-  title   = {Bert: Pre-training of deep bidirectional transformers for language understanding},
-  author  = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
-  journal = {arXiv preprint arXiv:1810.04805},
-  year    = {2018}
+
+@inproceedings{devlin2018bert,
+    title = "{BERT}: Pre-training of Deep Bidirectional Transformers for Language Understanding",
+    author = "Devlin, Jacob  and
+      Chang, Ming-Wei  and
+      Lee, Kenton  and
+      Toutanova, Kristina",
+    editor = "Burstein, Jill  and
+      Doran, Christy  and
+      Solorio, Thamar",
+    booktitle = "Proceedings of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)",
+    month = jun,
+    year = "2019",
+    address = "Minneapolis, Minnesota",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/N19-1423",
+    doi = "10.18653/v1/N19-1423",
+    pages = "4171--4186",
+    abstract = "We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models (Peters et al., 2018a; Radford et al., 2018), BERT is designed to pre-train deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications. BERT is conceptually simple and empirically powerful. It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE score to 80.5 (7.7 point absolute improvement), MultiNLI accuracy to 86.7{\%} (4.6{\%} absolute improvement), SQuAD v1.1 question answering Test F1 to 93.2 (1.5 point absolute improvement) and SQuAD v2.0 Test F1 to 83.1 (5.1 point absolute improvement).",
 }
+
 @inproceedings{hf-transformers-2020,
   title     = {Transformers: State-of-the-Art Natural Language Processing},
   author    = {Wolf, Thomas  and
@@ -133,13 +148,18 @@
   pages   = {1877--1901},
   year    = {2020}
 }
-@article{tst-review-2021,
-  title   = {A Review of Text Style Transfer using Deep Learning},
-  author  = {Toshevska, Martina and Gievska, Sonja},
-  journal = {arXiv preprint arXiv:2109.15144},
-  year    = {2021},
-  url     = {https://arxiv.org/abs/2109.15144}
+@ARTICLE{tst-review-2021,
+  author={Toshevska, Martina and Gievska, Sonja},
+  journal={IEEE Transactions on Artificial Intelligence}, 
+  title={A Review of Text Style Transfer Using Deep Learning}, 
+  year={2022},
+  volume={3},
+  number={5},
+  pages={669-684},
+  keywords={Writing;Deep learning;Natural language processing;Linguistics;Neural networks;Deep learning (DL);natural language generation (NLG);natural language processing;neural networks;text style transfer},
+  doi={10.1109/TAI.2021.3115992}
 }
+
 @article{tst-survey-2022,
   title     = {Deep Learning for Text Style Transfer: A Survey},
   author    = {Jin, Di  and
@@ -159,11 +179,12 @@
   pages     = {155--205},
   abstract  = {Text style transfer is an important task in natural language generation, which aims to control certain attributes in the generated text, such as politeness, emotion, humor, and many others. It has a long history in the field of natural language processing, and recently has re-gained significant attention thanks to the promising performance brought by deep neural models. In this article, we present a systematic survey of the research on neural text style transfer, spanning over 100 representative articles since the first neural text style transfer work in 2017. We discuss the task formulation, existing datasets and subtasks, evaluation, as well as the rich methodologies in the presence of parallel and non-parallel data. We also provide discussions on a variety of important topics regarding the future development of this task.1}
 }
+
 @article{gao2020pile,
-  title   = {The pile: An 800gb dataset of diverse text for language modeling},
-  author  = {Gao, Leo and Biderman, Stella and Black, Sid and Golding, Laurence and Hoppe, Travis and Foster, Charles and Phang, Jason and He, Horace and Thite, Anish and Nabeshima, Noa and others},
-  journal = {arXiv preprint arXiv:2101.00027},
-  year    = {2020}
+  title={The {P}ile: An 800GB Dataset of Diverse Text for Language Modeling},
+  author={Gao, Leo and Biderman, Stella and Black, Sid and Golding, Laurence and Hoppe, Travis and Foster, Charles and Phang, Jason and He, Horace and Thite, Anish and Nabeshima, Noa and Presser, Shawn and Leahy, Connor},
+  journal={arXiv preprint arXiv:2101.00027},
+  year={2020}
 }
 @misc{zhao2023survey,
   title         = {A Survey of Large Language Models},
@@ -190,12 +211,28 @@
   author = {paperswithcode.com}
 }
 
-@article{yang2024unveiling,
-  title   = {Unveiling the Generalization Power of Fine-Tuned Large Language Models},
-  author  = {Yang, Haoran and Zhang, Yumeng and Xu, Jiaqi and Lu, Hongyuan and Heng, Pheng Ann and Lam, Wai},
-  journal = {arXiv preprint arXiv:2403.09162},
-  year    = {2024}
+@inproceedings{yang2024unveiling,
+    title = "Unveiling the Generalization Power of Fine-Tuned Large Language Models",
+    author = "Yang, Haoran  and
+      Zhang, Yumeng  and
+      Xu, Jiaqi  and
+      Lu, Hongyuan  and
+      Heng, Pheng-Ann  and
+      Lam, Wai",
+    editor = "Duh, Kevin  and
+      Gomez, Helena  and
+      Bethard, Steven",
+    booktitle = "Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)",
+    month = jun,
+    year = "2024",
+    address = "Mexico City, Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.naacl-long.51",
+    doi = "10.18653/v1/2024.naacl-long.51",
+    pages = "884--899",
+    abstract = "While Large Language Models (LLMs) have demonstrated exceptional multitasking abilities, fine-tuning these models on downstream, domain-specific datasets is often necessary to yield superior performance on test sets compared to their counterparts without fine-tuning. However, the comprehensive effects of fine-tuning on the LLMs{'} generalization ability are not fully understood.This paper delves into the differences between original, unmodified LLMs and their fine-tuned variants. Our primary investigation centers on whether fine-tuning affects the generalization ability intrinsic to LLMs. To elaborate on this, we conduct extensive experiments across five distinct language tasks on various datasets.Our main findings reveal that models fine-tuned on generation and classification tasks exhibit dissimilar behaviors in generalizing to different domains and tasks.Intriguingly, we observe that integrating the in-context learning strategy during fine-tuning on generation tasks can enhance the model{'}s generalization ability.Through this systematic investigation, we aim to contribute valuable insights into the evolving landscape of fine-tuning practices for LLMs.",
 }
+
 @misc{chiang2024chatbot,
   title         = {Chatbot Arena: An Open Platform for Evaluating LLMs by Human Preference},
   author        = {Wei-Lin Chiang and Lianmin Zheng and Ying Sheng and Anastasios Nikolas Angelopoulos and Tianle Li and Dacheng Li and Hao Zhang and Banghua Zhu and Michael Jordan and Joseph E. Gonzalez and Ion Stoica},
