fix spacy citation

--- a/article/references.bib
+++ b/article/references.bib
@@ -612,9 +612,15 @@
 }
 
 @misc{spacy,
-  author = {Honnibal, Matthew et. al.},
-  title  = {spaCy},
-  year   = {2017},
+  author = {
+    Honnibal, Matthew and
+    Montani, Ines and
+    Van Landeghem, Sofie and
+    Boyd, Adriane
+  },
+  doi    = {10.5281/zenodo.1212303},
+  title  = {spaCy: Industrial-strength Natural Language Processing in Python},
+  year   = {2020},
   url    = {https://github.com/explosion/spaCy},
   note   = {Version: 3.7.5; Last Accessed: 2024-06-14}
 }
