capitalize Figure everywhere

--- a/article/main.tex
+++ b/article/main.tex
@@ -347,7 +347,7 @@ The LFTK ID is used throughout tables and figures to refer to a specific HLF.\@
     }
     \caption{Handcrafted Linguistic Features}\label{table-hlf}
 \end{table*}
-\footnotetext{as described in the figure in~\cite{lugea2023stylistics}, chapter 1, page 7}
+\footnotetext{as described in the figure from~\cite{lugea2023stylistics}, chapter 1, page 7}
 
 \subsection{Corpus Selection}\label{ds-selection}
 
@@ -612,12 +612,12 @@ The results shown in Table~\ref{table-prompt-2-ifd-cnn-dailymail} contradict our
 expectations outright.
 The most surprising behaviour is exhibited for HLFs which are derived into more
 concrete generation instructions, such as the total number of words.
-This behaviour is highlighted in figure~\ref{fig-p2-ifd-gemini-twords}.
+This behaviour is highlighted in Figure~\ref{fig-p2-ifd-gemini-twords}.
 Additionally, we notice regressive behaviour for some models compared to the
-previously explored results in figure~\ref{fig-p2-ifd-claude3-nuadj}.
+previously explored results in Figure~\ref{fig-p2-ifd-claude3-nuadj}.
 Finally, the abstractness of the text generation instructions for certain HLFs
 leads to the generated text not being compliant as exemplified in
-figure~\ref{fig-p2-ifd-llama3-a-kup-pw}.
+Figure~\ref{fig-p2-ifd-llama3-a-kup-pw}.
 
 \begin{table*}[ht]
     \centering
