reword section 3.1 and make other minor corrections

--- a/article/references.bib
+++ b/article/references.bib
@@ -530,7 +530,7 @@
 
 @article{kolmogorov1933,
   title   = {Sulla determinazione empirica di una legge didistribuzione},
-  author  = {An, Kolmogorov},
+  author  = {Kolmogorov, Andrey},
   journal = {Giorn Dell'inst Ital Degli Att},
   volume  = {4},
   pages   = {89--91},
