--- a/article/main.tex
+++ b/article/main.tex
@@ -224,7 +224,7 @@ the corpus.
 
 \subsection{Process}\label{subsec:experiment-process}
 
-The experiment starts with choosing experiment parameter values.
+We start by choosing experiment parameter values.
 The following parameters have stable values throughout the experiment process: a
 selection of HLFs, a corpus containing texts, a target LLM, examples from the
 chosen corpus, one input text from the chosen corpus and one input text from
